# beacon-gpt

./: .gitignore  README.md  launch.sh  modeling_beacon_gpt.py  prepare_data.py  pyproject.toml  train.py
checkpoints/: config.yaml
configs/: gpt-2.yaml  gpt-tiny.yaml  nano-gpt.yaml
scripts/: download_dclm_10b.sh  download_fineweb_10b.py  tokenize_dataset.py
src/: utils.py
src/data/: beacon_injecting.py  dist_dataloader.py  download_fineweb_10b.py
src/modeling/: transformer.py
src/optimizer/: muon.py
