[project]
name = "beacon-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "numpy>=2.3.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.1",
    "wandb>=0.21.1",
]
